# conductor-dev

./: .gitignore  readme.md
defs/test1/: mhc1_task.json  (+2 more)
python/conductor-manager/: .gitignore  AUTHORS  ChangeLog  MANIFEST.in  readme.md  requirement.txt  requirements.txt  setup.cfg  setup.py  test.md
python/conductor-manager/cdm/: version.py
python/conductor-manager/cdm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt
python/conductor-manager/cdm/cli/: main.py
python/conductor-manager/cdm/cli/commands/: __init__.py  action_handlers.py  conductor_actions.py  create_def.py  register_def.py
python/conductor-manager/cdm/cli/common/: client_factory.py  exceptions.py  register_def.py  utils.py
python/conductor-manager/cdm/templates/: task.json.template  workflow.json.template
python/conductor-manager/cdm/tests/: mock_client.py  test_def_client.py
python/conductor-manager/etc/: cm.conf
python/conductor-worker/: README.md  requirements.txt  setup.cfg
python/conductor-worker/cw/: main.py
python/conductor-worker/cw/common/: cfg.py  exception.py  log.py  task.py
python/conductor-worker/cw/condu/: condu.py  conductor.py
python/conductor-worker/cw/db/: __init__.py  models.py
python/conductor-worker/cw/db/data_models/: test1.py
python/conductor-worker/cw/tests/: test_worker.py
python/conductor-worker/docs/: dbcmft.md
python/conductor-worker/etc/: cw.conf
python/conductor-worker/mworker/common/: common.py
python/conductor-worker/mworker/conductor/: ConductorWorker.py
python/conductor-worker/mworker/extend/: metedata.py
python/conductor-worker/sample/samples/: SampleWorker.py
python/conductor-worker/workers/lib/: common.py  docker.py
(+144 files in other folders)
