[metadata]
name = cdm
summary = conductor.manager
description-file =
    readme.md
author = mhc
author-email = merzhog0501@163.com
home-page =
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    cdm
extra_files =
    requirements.txt

[entry_points]
console_scripts =
    conductor-manager = cdm.cli.main:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[wheel]
universal = 1
